--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
     <title>Weather App</title>
   </head>
-  <body class="bg-gradient-to-br from-cyan-700 to-blue-700 min-h-screen">
+  <body class="bg-gradient-to-br from-sky-400 to-indigo-900 min-h-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
